--- a/package.json
+++ b/package.json
@@ -1,103 +1,79 @@
 {
-  "name": "framework7-vue-webpack-template",
-  "version": "1.0.1",
-  "description": "Framework7 Vue + Webpack + Cordova app template",
-  "scripts": {
-    "dev": "node build/dev-server.js",
-    "build": "node build/build.js",
-    "cordova-add-android": "cordova platform add android",
-    "cordova-add-ios": "cordova platform add ios",
-    "cordova-add-browser": "cordova platform add browser",
-    "cordova-rm-android": "cordova platform remove android",
-    "cordova-rm-ios": "cordova platform remove ios",
-    "cordova-rm-browser": "cordova platform remove browser",
-    "cordova-build-android": "npm run build && cordova build android",
-    "cordova-build-ios": "npm run build && cordova build ios",
-    "cordova-build-browser": "npm run build && cordova build browser",
-    "cordova-run-browser": "npm run build && cordova run browser",
-    "cordova-run-ios": "npm run build && cordova run ios",
-    "cordova-run-android": "npm run build && cordova run android"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nolimits4web/Framework7-Vue-Webpack-Template.git"
-  },
-  "keywords": [
-    "ios",
-    "webpack",
-    "framework7",
-    "vue",
-    "vuejs",
-    "material",
-    "mobile",
-    "app",
-    "f7"
-  ],
-  "author": "Vladimir Kharlampidi",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/nolimits4web/Framework7-Vue-Webpack-Template/issues"
-  },
-  "homepage": "http://framework7.io/vue/",
-  "dependencies": {
-    "cordova-android": "^6.2.3",
-    "cordova-browser": "^4.1.0",
-    "cordova-plugin-whitelist": "^1.3.2",
-    "framework7": "1.6.0",
-    "framework7-vue": "^0.9.1",
-    "vue": "^2.3.3"
-  },
-  "devDependencies": {
-    "autoprefixer": "^7.1.1",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.2.1",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "chalk": "^1.1.3",
-    "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.3",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "function-bind": "^1.1.0",
-    "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
-    "webpack-bundle-analyzer": "^2.8.2",
-    "semver": "^5.3.0",
-    "opn": "^5.0.0",
-    "optimize-css-assets-webpack-plugin": "^1.3.2",
-    "ora": "^1.1.0",
-    "rimraf": "^2.6.0",
-    "url-loader": "^0.5.7",
-    "vue-loader": "^12.2.1",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.3.3",
-    "webpack": "^2.6.1",
-    "webpack-dev-middleware": "^1.10.2",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-whitelist": {}
+    "name": "Login",
+    "version": "1.0.0",
+    "description": "Login app template with Framework7 + Vue + Webpack2 + Cordova",
+    "license": "MIT",
+    "scripts": {
+        "hot-dev": "cordova run browser -- --lr",
+        "hot-dev-ios": "cordova run ios -- --lr && npm run hot-dev",
+        "hot-dev-android": "cordova run android -- --lr && npm run hot-dev"
     },
-    "platforms": [
-      "android",
-      "browser"
-    ]
-  }
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/daniegarcia254/Framework7-Vue-Webpack-Cordova.git"
+    },
+    "keywords": [
+        "ios",
+        "webpack",
+        "framework7",
+        "vue",
+        "vuejs",
+        "material",
+        "mobile",
+        "app",
+        "f7"
+    ],
+    "dependencies": {
+        "cordova-browser": "^4.1.0",
+        "cordova-plugin-whitelist": "^1.3.2",
+        "framework7": "1.6.0",
+        "framework7-icons": "^0.8.9",
+        "framework7-vue": "^0.9.1",
+        "nunito-fontface": "^0.7.1",
+        "vue": "^2.3.3"
+    },
+    "devDependencies": {
+        "cheerio": "^0.22.0",
+        "chokidar": "^1.6.1",
+        "clean-webpack-plugin": "^0.1.15",
+        "css-loader": "^0.27.3",
+        "device.js": "git+https://github.com/matthewhudson/device.js.git",
+        "epipebomb": "^1.0.0",
+        "extract-text-webpack-plugin": "^2.1.0",
+        "file-loader": "^0.10.1",
+        "html-loader": "^0.4.5",
+        "html-webpack-plugin": "^2.28.0",
+        "node-sass": "^4.5.0",
+        "path": "^0.12.7",
+        "sass-loader": "^6.0.3",
+        "style-loader": "^0.13.2",
+        "svg-url-loader": "^2.0.2",
+        "uglify-js": "git+https://github.com/mishoo/UglifyJS2.git#harmony-v2.8.22",
+        "uglifyjs-webpack-plugin": "^0.3.0",
+        "url-loader": "^0.5.8",
+        "vue-hot-reload-api": "^2.0.11",
+        "vue-html-loader": "^1.2.4",
+        "vue-loader": "^11.1.4",
+        "vue-style-loader": "^3.0.1",
+        "vue-template-compiler": "^2.2.4",
+        "webpack": "^2.2.1",
+        "webpack-dev-server": "^2.4.1"
+    },
+    "engines": {
+        "node": ">= 4.0.0",
+        "npm": ">= 3.0.0"
+    },
+    "browserlist": [
+        "> 1%",
+        "last 2 versions",
+        "not ie <= 8"
+    ],
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-whitelist": {}
+        },
+        "platforms": [
+            "browser"
+        ]
+    }
 }
