--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "hot-dev": "cordova run browser -- --lr",
         "hot-dev-ios": "cordova run ios -- --lr && npm run hot-dev",
-        "hot-dev-android": "cordova run android -- --lr && npm run hot-dev"
+        "hot-dev-android": "cordova run android -- --lr && npm run hot-dev",
+        "generate-icon-splash": "splashicon-generator --imagespath='src/static'"
     },
     "repository": {
         "type": "git",
@@ -24,7 +25,8 @@
         "f7"
     ],
     "dependencies": {
-        "cordova-browser": "^4.1.0",
+        "cordova-android": "^6.2.3",
+        "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-whitelist": "^1.3.2",
         "framework7": "1.6.0",
         "framework7-icons": "^0.8.9",
@@ -70,10 +72,11 @@
     ],
     "cordova": {
         "plugins": {
-            "cordova-plugin-whitelist": {}
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-splashscreen": {}
         },
         "platforms": [
-            "browser"
+            "android"
         ]
     }
 }
