--- a/package.json
+++ b/package.json
@@ -1,82 +1,79 @@
 {
-    "name": "Login",
-    "version": "1.0.0",
-    "description": "Login app template with Framework7 + Vue + Webpack2 + Cordova",
-    "license": "MIT",
-    "scripts": {
-        "hot-dev": "cordova run browser -- --lr",
-        "hot-dev-ios": "cordova run ios -- --lr && npm run hot-dev",
-        "hot-dev-android": "cordova run android -- --lr && npm run hot-dev",
-        "generate-icon-splash": "splashicon-generator --imagespath='src/static'"
+  "name": "Login",
+  "version": "1.0.0",
+  "description": "Login app template with Framework7 + Vue + Webpack2 + Cordova",
+  "license": "MIT",
+  "scripts": {
+    "hot-dev": "cordova run browser -- --lr",
+    "hot-dev-ios": "cordova run ios -- --lr && npm run hot-dev",
+    "hot-dev-android": "cordova run android -- --lr && npm run hot-dev",
+    "generate-icon-splash": "splashicon-generator --imagespath='src/static'"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/daniegarcia254/Framework7-Vue-Webpack-Cordova.git"
+  },
+  "keywords": [
+    "ios",
+    "webpack",
+    "framework7",
+    "vue",
+    "vuejs",
+    "material",
+    "mobile",
+    "app",
+    "f7"
+  ],
+  "dependencies": {
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-whitelist": "^1.3.2",
+    "framework7": "1.6.0",
+    "framework7-icons": "^0.8.9",
+    "framework7-vue": "^0.9.1",
+    "nunito-fontface": "^0.7.1",
+    "vue": "^2.3.3"
+  },
+  "devDependencies": {
+    "cheerio": "^0.22.0",
+    "chokidar": "^1.6.1",
+    "clean-webpack-plugin": "^0.1.15",
+    "css-loader": "^0.27.3",
+    "device.js": "git+https://github.com/matthewhudson/device.js.git",
+    "epipebomb": "^1.0.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
+    "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.0",
+    "path": "^0.12.7",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.13.2",
+    "svg-url-loader": "^2.0.2",
+    "uglify-js": "git+https://github.com/mishoo/UglifyJS2.git#harmony-v2.8.22",
+    "uglifyjs-webpack-plugin": "^0.3.0",
+    "url-loader": "^0.5.8",
+    "vue-hot-reload-api": "^2.0.11",
+    "vue-html-loader": "^1.2.4",
+    "vue-loader": "^11.1.4",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.2.4",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1"
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
+  },
+  "browserlist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ],
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-splashscreen": {}
     },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/daniegarcia254/Framework7-Vue-Webpack-Cordova.git"
-    },
-    "keywords": [
-        "ios",
-        "webpack",
-        "framework7",
-        "vue",
-        "vuejs",
-        "material",
-        "mobile",
-        "app",
-        "f7"
-    ],
-    "dependencies": {
-        "cordova-browser": "^4.1.0",
-        "cordova-plugin-splashscreen": "^4.0.3",
-        "cordova-plugin-whitelist": "^1.3.2",
-        "framework7": "1.6.0",
-        "framework7-icons": "^0.8.9",
-        "framework7-vue": "^0.9.1",
-        "nunito-fontface": "^0.7.1",
-        "vue": "^2.3.3"
-    },
-    "devDependencies": {
-        "cheerio": "^0.22.0",
-        "chokidar": "^1.6.1",
-        "clean-webpack-plugin": "^0.1.15",
-        "css-loader": "^0.27.3",
-        "device.js": "git+https://github.com/matthewhudson/device.js.git",
-        "epipebomb": "^1.0.0",
-        "extract-text-webpack-plugin": "^2.1.0",
-        "file-loader": "^0.10.1",
-        "html-loader": "^0.4.5",
-        "html-webpack-plugin": "^2.28.0",
-        "node-sass": "^4.5.0",
-        "path": "^0.12.7",
-        "sass-loader": "^6.0.3",
-        "style-loader": "^0.13.2",
-        "svg-url-loader": "^2.0.2",
-        "uglify-js": "git+https://github.com/mishoo/UglifyJS2.git#harmony-v2.8.22",
-        "uglifyjs-webpack-plugin": "^0.3.0",
-        "url-loader": "^0.5.8",
-        "vue-hot-reload-api": "^2.0.11",
-        "vue-html-loader": "^1.2.4",
-        "vue-loader": "^11.1.4",
-        "vue-style-loader": "^3.0.1",
-        "vue-template-compiler": "^2.2.4",
-        "webpack": "^2.2.1",
-        "webpack-dev-server": "^2.4.1"
-    },
-    "engines": {
-        "node": ">= 4.0.0",
-        "npm": ">= 3.0.0"
-    },
-    "browserlist": [
-        "> 1%",
-        "last 2 versions",
-        "not ie <= 8"
-    ],
-    "cordova": {
-        "plugins": {
-            "cordova-plugin-whitelist": {},
-            "cordova-plugin-splashscreen": {}
-        },
-        "platforms": [
-            "browser"
-        ]
-    }
+    "platforms": []
+  }
 }
